--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.0-alpha01'
 
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
     //Lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
