--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.3.0-alpha01'
         retrofit_version = '2.9.0'
         hilt_version = '2.42'
+        nav_version = "2.5.0"
     }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
